apps/photo-luminescence/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photo-luminescence
  labels:
    name: photo-luminescence
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: photo-luminescence
            port:
              number: 80
